# ChangeLog for net-fs/openafs-kernel
# Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-fs/openafs-kernel/ChangeLog,v 1.74 2007/09/19 17:45:21 stefaan Exp $

*openafs-kernel-1.4.4_p20070724-r2 (19 Sep 2007)

  19 Sep 2007; Stefaan De Roeck <stefaan@gentoo.org>
  +files/openafs-sparc.patch, +openafs-kernel-1.4.4_p20070724-r2.ebuild:
  Add patch to support sparc (bug #176050)

*openafs-kernel-1.4.4_p20070724-r1 (19 Sep 2007)

  19 Sep 2007; Stefaan De Roeck <stefaan@gentoo.org>
  +files/openafs-ppc64.patch, +openafs-kernel-1.4.4_p20070724-r1.ebuild:
  Fix for ppc64 (bug #191216)

  13 Sep 2007; Markus Meier <maekke@gentoo.org>
  openafs-kernel-1.4.4_p20070724.ebuild:
  stable on x86, wrt bug #191216

  09 Sep 2007; Joseph Jezak <josejx@gentoo.org>
  openafs-kernel-1.4.4_p20070724.ebuild:
  Marked ppc stable for bug #191216.

*openafs-kernel-1.4.4_p20070724 (24 Jul 2007)

  24 Jul 2007; Stefaan De Roeck <stefaan@gentoo.org>
  -openafs-kernel-1.4.4-r1.ebuild, +openafs-kernel-1.4.4_p20070724.ebuild:
  Add prerelease for compatibility with linux-2.6.22 (bug #185130)

*openafs-kernel-1.4.4-r1 (24 Jul 2007)

  24 Jul 2007; Stefaan De Roeck <stefaan@gentoo.org>
  +openafs-kernel-1.4.4-r1.ebuild:
  Now compatible with linux-2.6.22 (bug #185130)

  02 Jun 2007; Raúl Porcel <armin76@gentoo.org>
  openafs-kernel-1.2.13.ebuild, openafs-kernel-1.4.0-r1.ebuild,
  openafs-kernel-1.4.2-r2.ebuild, openafs-kernel-1.4.3_rc2.ebuild,
  openafs-kernel-1.4.3_rc3.ebuild, openafs-kernel-1.4.4.ebuild,
  openafs-kernel-1.5.19.ebuild:
  Drop ia64 keyword as it doesn't work with current glibc, bug 156008

*openafs-kernel-1.5.19 (07 May 2007)

  07 May 2007; Stefaan De Roeck <stefaan@gentoo.org>
  -openafs-kernel-1.5.14.ebuild, -openafs-kernel-1.5.15.ebuild,
  +openafs-kernel-1.5.19.ebuild:
  Version bump 1.5.19, remove older versions

  06 May 2007; Marius Mauch <genone@gentoo.org>
  openafs-kernel-1.2.13.ebuild: