@@ -1,6 +1,10 @@
 # ChangeLog for net-fs/openafs
 # Copyright 2002-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-fs/openafs/ChangeLog,v 1.115 2007/09/19 14:50:44 stefaan Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-fs/openafs/ChangeLog,v 1.116 2007/09/23 01:55:33 josejx Exp $
+
+  23 Sep 2007; Joseph Jezak <josejx@gentoo.org>
+  openafs-1.4.4_p20070724-r1.ebuild:
+  Marked ppc/ppc64 stable early to fix klog issues (bug #191216).
 
   19 Sep 2007; Stefaan De Roeck <stefaan@gentoo.org>
   openafs-1.4.4_p20070724-r1.ebuild:
