@@ -1,6 +1,11 @@
 # ChangeLog for net-fs/openafs-kernel
 # Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-fs/openafs-kernel/ChangeLog,v 1.74 2007/09/19 17:45:21 stefaan Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-fs/openafs-kernel/ChangeLog,v 1.75 2007/09/23 01:52:35 josejx Exp $
+
+  23 Sep 2007; Joseph Jezak <josejx@gentoo.org>
+  openafs-kernel-1.4.4_p20070724-r2.ebuild:
+  Marked ppc/ppc64 stable early to fix build issues with ppc64 kernels (bug
+  #191216).
 
 *openafs-kernel-1.4.4_p20070724-r2 (19 Sep 2007)
 
